<resources>
    <string name="app_name">SmartLab</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank Mian fragment</string>

    <string name="nvr_menu_string_dashboard">Dashboard</string>
    <string name="nvr_menu_string_register_user">登记新用户</string>
    <string name="nvr_menu_string_login">登录</string>
    <string name="intro_message">你好!</string>
    <string name="error">错误</string>
    <string name="no_nfc">在此设备未发现 NFC 功能!</string>
    <string name="nfc_disabled">NFC功能未开启!请到系统设置中开启!</string>
    <string name="menu_main_clear_title">清除</string>
    <!--ESPTOUCH-->
    <string name="etApSsidTitle">SSID</string>
    <string name="etPasswordTitle">Password</string>
    <string name="switchIsSsidHiddenTitle">SSID是否隐藏  </string>
    <string name="spinnerTaskResultCountTitle">结果数量</string>
    <string name="btnConfirmTitle">配置</string>
</resources>
